Add image and receipe details

--- a/cookie.html
+++ b/cookie.html
@@ -10,6 +10,16 @@
 
 <body>
     <h1>Bar Cookies</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2021%2F05%2F04%2F274978-blueberry-cheesecake-cookies-kim.jpeg&w=400&h=400&c=sc&poi=face&q=60"
+        alt="Soft Sour Cream Cookie">
+
+    <p>If you aren't mixing sour cream into your cookie batter, you could be missing out on a fantastic cookie
+        experience. Sour cream boasts high fat levels and a fair amount of acidity. Both factors give baked goods a
+        hefty dose of moisture, as well as a bright, tangy flavor.</p>
+    <p>Additionally, sour cream does do not thin out your batter as buttermilk or another liquid ingredient might, which
+        lends the baked cookies a tender, fluffy texture. So whether you just need to use up some extra sour cream or
+        want to enjoy some cookies with a delightfully delicate crumb, check out these sour cream cookie recipes, and
+        whip up a batch of your own.</p>
 </body>
 
 </html>
