--- a/cookie.html
+++ b/cookie.html
@@ -20,6 +20,28 @@
         lends the baked cookies a tender, fluffy texture. So whether you just need to use up some extra sour cream or
         want to enjoy some cookies with a delightfully delicate crumb, check out these sour cream cookie recipes, and
         whip up a batch of your own.</p>
+
+    <ul>
+        <li>6 egg yolks</li>
+        <li>½ pint sour cream</li>
+        <li>3 tablespoons white sugar</li>
+        <li>1 tablespoon whiskey</li>
+        <li>1 cup vegetable oil for frying</li>
+        <li>1 tablespoon vanilla extract</li>
+        <li>3 cups all-purpose flour</li>
+        <li>⅓ cup confectioners' sugar for decoration</li>
+    </ul>
+
+    <ol>
+        <li>Heat oil in deep-fryer to 375 degrees F (190 degrees C).</li>
+        <li>In a large bowl, beat together the egg yolks, sour cream, white sugar, vanilla and whiskey until smooth.
+            Stir in flour until dough is stiff enough to knead. Turn out onto a floured surface and knead until smooth.
+            Knead in additional flour if necessary. Divide dough into 3 or 4 pieces and roll each ball on floured
+            surface. Cut into strips about 3 inches long then make a slit long ways down the middle. Pull one of the
+            ends through like a bow.</li>
+        <li>Place into hot oil and deep fry until golden brown. Let drain on paper towels and sprinkle with
+            confectioners' sugar.</li>
+    </ol>
 </body>
 
 </html>
