--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>The Recipes</h1>
     <a href="cookie.html">Bar Cookie</a>
+    <a href="cheesecake.html">Cheesecake</a>
 </body>
 
 </html>
